plugins {
    id 'maven-publish'
    id 'java-library'
    id 'idea'
    id 'java'
}
group 'com.github.SpyrosKou'
version = '2023.06.14.02'
description = 'A pure java version of actionlib'
sourceCompatibility = JavaVersion.VERSION_17

repositories {
    repositories {
        mavenLocal()
        mavenCentral()
        jcenter()
        maven {
            url "https://github.com/rosjava/rosjava_mvn_repo/raw/master"
        }
    }

}

java {
    withSourcesJar()
    withJavadocJar()
}

publishing {
    publications {
        maven(MavenPublication) {
            from(components.java)
        }
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

tasks.withType(Javadoc) {
    options.encoding = 'UTF-8'
}


dependencies {

    implementation group: 'org.ros.rosjava_bootstrap', name: 'message_generation', version: '0.3.3'
    implementation 'org.ros.rosjava_core:rosjava:[0.3,0.4)'

    api 'org.ros.rosjava_messages:actionlib_msgs:1.12.5'
    api 'org.ros.rosjava_messages:actionlib:1.11.5'
    api 'org.ros.rosjava_messages:std_msgs:0.5.10'


    implementation 'com.google.guava:guava:31.1-jre'
    api 'org.slf4j:slf4j-api:1.7.25'
    runtimeOnly 'org.apache.logging.log4j:log4j-slf4j-impl:2.20.0'
    implementation 'org.apache.commons:commons-lang3:3.12.0'
    implementation 'org.apache.commons:commons-collections4:4.4'
    implementation 'org.apache.commons:commons-configuration2:2.8.0'


    testImplementation 'junit:junit:4.12'
    testImplementation 'org.ros.rosjava_messages:actionlib_tutorials:0.1.10'
    testImplementation 'org.ros.rosjava_messages:turtle_actionlib:0.1.10'

}


jar {
    manifest {
        version = project.version
    }
}






